[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/pipe_start_strip11.png" type="Texture" id=1]
[ext_resource path="res://Pipes/Start/PipeStart.gd" type="Script" id=2]
[ext_resource path="res://UI/Buttons/128x128.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Start"
tracks/0/type = "value"
tracks/0/path = NodePath("PipeBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 10 ]
}

[node name="PipeStart" type="Node2D"]
script = ExtResource( 2 )

[node name="PipeBody" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 11

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 64, 0 )
enabled = true
cast_to = Vector2( 16, 0 )
collide_with_areas = true
collide_with_bodies = false

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( -64, -64 )
normal = ExtResource( 3 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
